p-1: console-alert/bien/nhung-js

--- a/02-nhung-js/index.html
+++ b/02-nhung-js/index.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-    <h1>Chào Mừng Các Bạn Đến Với Lập Trình Cơ Bản</h1>
+
+    <!-- Các thành phần HTML -->
+
+    <!-- <script>
+        alert("Xin chào");
+    </script> -->
+
+    <script src="./main.js"></script>
 </body>
 
 </html>
