--- a/03-bien/index.html
+++ b/03-bien/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Chào Mừng Các Bạn Đến Với Lập Trình Cơ Bản</h1>
+    <script src="./main.js"></script>
 </body>
 
 </html>
